--- a/ExcelExport/templates/home.html
+++ b/ExcelExport/templates/home.html
@@ -24,8 +24,8 @@
             max-width: 350px;
         }
         .logo {
-            width: 120px;
-            margin-bottom: 15px;
+            width: 200px;
+            margin-bottom: 1px;
         }
         .btn-custom {
             width: 100%;
@@ -37,7 +37,7 @@
             color: white;
         }
         .btn-dark-custom {
-            background-color: #1d3557;
+            background-color: #2C2C2C;
             border: none;
         }
         .btn-dark-custom:hover {
@@ -59,8 +59,6 @@
         <p class="text-muted mb-4">Tu contabilidad más dulce</p>
         <a href="{% url 'libro_diario' %}" class="btn btn-custom btn-dark-custom">Comprobante Contable</a>
         <a href="{% url 'ver_registro' %}" class="btn btn-custom btn-dark-custom">Ver Registro</a>
-        <a href="{% url 'configuracion' %}" class="btn btn-custom btn-dark-custom">Configuración</a>
-        <a href="{% url 'logout' %}" class="btn btn-custom btn-exit">Salir</a>
     </div>
 </body>
 </html>
