--- a/ExcelExport/templates/libro_diario.html
+++ b/ExcelExport/templates/libro_diario.html
@@ -16,20 +16,19 @@
         }
         .container {
             background-color: white;
-            padding: 45px;
+            padding: 15px;
             border-radius: 10px;
             box-shadow: 0 6px 10px rgba(0, 0, 0, 0.1);
             max-width: 350px;
             width: 100%;
         }
         .logo {
-            width: 100px;
+            width: 90px;
         }
         .header {
             display: flex;
             justify-content: space-between;
             align-items: center;
-            margin-bottom: 20px;
         }
         .btn-back {
             font-size: 14px;
@@ -46,7 +45,7 @@
             padding: 12px;
             font-size: 16px;
             font-weight: bold;
-            margin-top: 20px;
+            margin-top: 5px;
         }
         .btn-primary:hover {
             background-color: #555;
@@ -69,7 +68,7 @@
         <div class="header">
             <img src="{% static 'dulcespercy.jpg' %}" alt="Dulces Percy Logo" class="logo">
         </div>
-        <h4 class="text-center mb-4">Añadir Registro al Libro Diario</h4>
+        <h4 class="text-center mb-1">Añadir Registro a LDE </h4>
         <form method="post">
             {% csrf_token %}
             {{ form.as_p }}
