Mejoras en la plantilla de ver registro: se agregó Bootstrap, se optimizó el diseño y se mejoró la estructura HTML. Actualización de estilos en el botón de descarga.

--- a/ExcelExport/templates/libro_diario.html
+++ b/ExcelExport/templates/libro_diario.html
@@ -51,7 +51,7 @@
             background-color: #555;
         }
         .btn-secondary {
-            background-color: #e63946;
+            background-color: #218838;
             border: none;
             width: 100%;
             padding: 12px;
